# kinectTemplate

./: .gitignore  CMakeLists.txt  bugs.md
inc/: cameraOpen.h  myMath.h
src/: cameraOpen.cpp  cvOperation.cpp  main.cpp
workspace/: camera
